Updates on the new tosrus. I also added the new hammer.js to fix a bug with the slider not working on mobile.

--- a/css/kandt.css
+++ b/css/kandt.css
@@ -45,6 +45,11 @@
 .tos-caption {
     background-color: rgba(0,0,0,0.33);
     padding: 10px;
+    font-size: 18px;
+}
+
+.tos-caption-0 {
+    font-size: 18px;
 }
 
 #mapBox {
